# Ticket-Sense-Web

./: .gitignore  .template.env  DockerFile  Dockerfile.prod  Procfile  ProcfileHoncho  README.md  captain-definition-beat  captain-definition-celery  captain-definition-scrapsense  compose.yml  dump.rdb  index.html  pyproject.toml  requirements.txt  runserver.sh  stringMatching.py
.github/workflows/: codeql-analysis.yml
frontend/: README.md  package.json
frontend/learnreact/: package-lock.json  package.json
frontend/learnreact/src/: App.js
lib/: stringMatching.py
pwdemo/: output.json
pwdemo/pwdemo/: output.json  settings.py
scrapsense/: Dockerfile  requirements.txt
terraform/: main.tf
terraform/application/: main.tf
terraform/background-workers/: main.tf
terraform/scrapsense/: main.tf
ticketsense/: admin.py  models.py  tasks.py  urls.py  views.py
ticketsense/migrations/: 0001_initial.py  0004_trigger_theater_code.py
ticketsenseweb/: asgi.py  celery.py  manage.py  settings.py  urls.py
ticketsenseweb/scrapsense/: filename.json  output.json
ticketsenseweb/ticketsense/: admin.py  apps.py  bgtask.py  models.py  serializers.py  tasks.py  telegram_auth_check.py  urls.py  views.py
ticketsenseweb/ticketsenseweb/: celery.py  settings.py  urls.py  wsgi.py
ticketsenseweb/tswfrontend/: package.json
tswbackend/ticketsense/: urls.py
tswbackend/ticketsenseweb/: settings.py
tswfrontend/: package-lock.json  package.json  vercel.json
tswfrontend/public/: index.html  manifest.json
tswfrontend/src/: App.js  index.js
(+40 files in other folders)
