[tool.poetry]
name = "ticket-sense-web"
version = "0.1.0"
description = ""
authors = ["annleefores <annleefores@gmail.com>"]
readme = "README.md"
packages = [{include = "ticket_sense_web"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.3"
scrapy = "^2.9.0"
scrapyrt = "^0.13.0"
pytelegrambotapi = "^4.12.0"
python-dotenv = "^1.0.0"
djangorestframework = "^3.14.0"
celery = "^5.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
