[tool.poetry]
name = "ticket-sense-web"
version = "0.1.0"
description = ""
authors = ["annleefores <annleetestmail@gmail.com>"]
readme = "README.md"
packages = [{include = "ticket_sense_web"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.3"
scrapy = "^2.9.0"
scrapyrt = "^0.13.0"
pytelegrambotapi = "^4.12.0"
python-dotenv = "^1.0.0"
djangorestframework = "^3.14.0"
celery = "^5.3.1"
django-cors-headers = "^4.1.0"
django-celery-beat = "^2.5.0"
django-celery-results = "^2.5.1"
flower = "^2.0.0"
django-environ = "^0.10.0"
redis = "^4.6.0"
whitenoise = "^6.5.0"
cloudscraper = "^1.2.71"
thefuzz = "^0.19.0"
pillow = "^10.0.1"
python-levenshtein = "^0.21.1"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
